update responsive design

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,13 @@
 
-<div class="dashboard">
+<div class="dashboard d-flex">
     <div class="container">
 
         <div class="grid-container">
-
+            <!---------------- start user details structure-------------->
             <div class="user">
                 <div class="user-info">
                     <div class="img-shape">
-                        <!-- <source srcset="assets/images/image.webp" type="image/webp">
-                        <source srcset="assets/images/image.jpg" type="image/jpeg"> -->
-                 
+                    
                         <img width="138" height="145" loading="eager" src="../../assets/Bitmap.webp" alt="user img">
                     </div>
                     <div class="user-details">
@@ -29,7 +27,10 @@
                     </div>
                 </div>
             </div>
-    
+            <!---------------- end user details structure-------------->
+
+
+            <!---------------- start display products-------------->
             <div class="products">
 
                 @for(product of products ; track $index){
@@ -44,20 +45,23 @@
                                 </svg>
                             </div>
     
-                            <h2 class="product-price">{{product.price}} &dollar;</h2>
-                            <div class="product-info">
-                                <div class="title">
-                                    {{product.title}}
-                                </div>
-                                <div class="store">
-                                    <div>
-                                        instore
+                          <div class="product-body">
+                              <h2 class="product-price">{{product.price}}&dollar;</h2>
+                            
+                                <div class="product-info">
+                                    <div class="title">
+                                        {{product.title}}
                                     </div>
-                                    <div>
-                                        {{product.rating.count}}
+                                    <div class="store">
+                                        <div>
+                                            instore
+                                        </div>
+                                        <div>
+                                            {{product.rating.count}}
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                          </div>
                         
     
     
@@ -68,20 +72,11 @@
     
                     </div>
                 }
-           
-
-    
-
-
-
-
-
-
-
-                
-   
-
             </div>
+
+
+            <!---------------- end display products-------------->
+
         </div>
 
 
